Actual deitheme... committed all @ once. Oops.
Signed-off-by: Perceval FARAMAZ <perfaram@windowslive.com>

--- a/theme.toml
+++ b/theme.toml
@@ -1,18 +1,18 @@
-name = "Minimalist"
-license = "Apache License 2.0"
-licenselink = "https://github.com/digitalcraftsman/hugo-minimalist-theme/blob/master/LICENSE.md"
-description = "A minimalistic theme with the focus on blogging."
-homepage = "https://github.com/digitalcraftsman"
+name = "Deitheme"
+license = "MIT"
+licenselink = "https://github.com/deicoon/deitheme/blob/master/LICENSE.md"
+description = "Deicoon's official and original theme."
+homepage = "http://deicoon.com/products/deitheme"
 tags = ["disqus", "google analytics", "responsive", "syntax highlighting", "l10n"]
 features = []
-min_version = 0.20
+min_version = "0.31.1"
 
 [author]
-  name = "Digitalcraftsman"
-  homepage = "https://github.com/digitalcraftsman"
+  name = "Perceval Faramaz"
+  homepage = "http://perceval.faramaz.com"
 
 # If porting an existing theme
 [original]
-  name = "Raphael Riegger"
-  homepage = "http://rriegger.com/"
-  repo = "https://github.com/rriegger/MinimalisticBlogTheme"
+  name = ""
+  homepage = ""
+  repo = ""
